--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ a {
   
 /* Modal Content/Box */
 .modal-content {
-    background-color: #fefefe;
+    background-color: #272626;
     margin: 15% auto; /* 15% from the top and centered */
     padding: 20px;
     border: 1px solid #888;
