--- a/style.css
+++ b/style.css
@@ -44,6 +44,8 @@ nav ul {
 
 nav ul li {
     padding-left: 3em;
+    font-weight: bold;
+    font-size: large;
 }
 
 a {
@@ -101,7 +103,6 @@ h2 {
 .galery img {
     min-width: 25%;
     padding: 1vw 2vw;
-    transition: min-width ease-out 0.6s, width ease-out 0.6s, padding ease-out 0.6s;
 }
 
 .galery {
