--- a/style.css
+++ b/style.css
@@ -78,6 +78,7 @@ h2 {
 
 .jumbotron img {
     height: 50vh;
+    max-width: 50vw;
 }
 
 .jumbotron article {
@@ -93,6 +94,7 @@ h2 {
     padding: 0.5em 1em;
 }
 
+.linebreak,
 .diaporama {
     display: flex;
     align-items: center;
@@ -108,7 +110,7 @@ h2 {
 .galery {
     display: flex;
     align-items: center;
-    width: 60%;
+    width: 80%;
     height:100%;
     padding: 1%;
     overflow-x: scroll;
@@ -121,7 +123,7 @@ h2 {
   }
 
 .control {
-    width: 20%; 
+    width: 10%; 
     height:100%;
     display: flex;
     align-items: center;
@@ -132,47 +134,83 @@ h2 {
     height: 100%;
     text-align: center;
     justify-items: center;
-    font-size: 4em;
-    padding: 2vw 1vw;
+    font-size: 2em;
+    padding: 1vw 1vw;
     background-color: darkslategrey;
     color: antiquewhite;
 }
 
+.linebreak div {
+    width: 25%;
+    height: 2px;
+    background-color: rgb(49, 49, 49);
+    border: 1px solid rgb(69, 69, 69);
+    margin-bottom: 1em;
+}
 
 /* The Modal (background) */
 .modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
+    display: none;
+    position: fixed;
+    z-index: 1;
     left: 0;
     top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
 }
-  
+
 /* Modal Content/Box */
 .modal-content {
     background-color: #272626;
-    margin: 15% auto; /* 15% from the top and centered */
+    margin: 15% auto;
     padding: 20px;
     border: 1px solid #888;
-    width: 80%; /* Could be more or less, depending on screen size */
+    width: 80%;
   }
-  
-/* The Close Button */
+
 .close {
     color: #aaa;
     float: right;
     font-size: 28px;
     font-weight: bold;
 }
-  
+
 .close:hover,
 .close:focus {
     color: black;
     text-decoration: none;
     cursor: pointer;
+}
+
+@media screen and (768px <= width < 1200px) {
+    .control {
+        width: 15%;
+    }
+
+    .galery {
+        width: 70%;
+    }
+
+    .control button {
+        font-size: 3em;
+        padding: 2vw 1vw;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .control {
+        width: 20%;
+    }
+
+    .galery {
+        width: 60%;
+    }
+
+    .control button {
+        font-size: 4em;
+        padding: 2vw 1vw;
+    }
 }
