--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
 
 header {
     align-items: center;
-    padding: 2em 0 1em 1em;
+    padding: 2em 0 1em;
 }
 
 header,
@@ -42,19 +42,20 @@ nav ul {
     width: 100%;
 }
 
-nav ul li {
-    padding-left: 3em;
-    font-weight: bold;
-    font-size: large;
+nav li {
+    padding-left: 1em;
 }
 
 a {
     color: antiquewhite;
     text-decoration: none;
+    font-weight: bold;
+    font-size: large;
   }
 
 h1 {
-    width: 40%;
+    min-width: 40%;
+    padding: 0 0 0 1em;
 }
 
 h2 {
@@ -169,7 +170,13 @@ h2 {
     padding: 20px;
     border: 1px solid #888;
     width: 80%;
-  }
+}
+
+.modal-data {
+    display: flex;
+    flex-wrap: wrap-reverse;
+    width: 100%;
+}
 
 .close {
     color: #aaa;
@@ -198,6 +205,10 @@ h2 {
         font-size: 3em;
         padding: 2vw 1vw;
     }
+
+    nav li {
+        padding-left: 2em;
+    }
 }
 
 @media screen and (min-width: 1200px) {
@@ -212,5 +223,9 @@ h2 {
     .control button {
         font-size: 4em;
         padding: 2vw 1vw;
+    }
+
+    nav li {
+        padding-left: 3em;
     }
 }
