--- a/style.css
+++ b/style.css
@@ -153,6 +153,12 @@ h2 {
     box-shadow: 0px 0px 12px rgb(183, 184, 184);
 }
 
+.control button:disabled {
+    color: gray;
+    box-shadow: none;
+    border: none;
+}
+
 .linebreak .line {
     width: 25%;
     height: 4px;
@@ -162,12 +168,19 @@ h2 {
     margin-bottom: 1em;
 }
 
+.scanner {
+    position: relative;
+    left: 0;
+    transition: left 0.4s ease-in-out;
+}
+
 article:hover .scanner {
     border-radius: 50%;
     width: 30%;
     height: 100%;
     background-color: hsl(240, 0%, 35%);
     box-shadow: 0px 0px 6px hsl(240, 0%, 40%);
+    position: relative;
 }
 
 /* The Modal (background) */
@@ -272,18 +285,4 @@ article:hover .scanner {
     }
 }
 
-@keyframes scanner-loop {
-    from {
-        margin-left:0%;
-    } to { 
-        margin-left:70%;
-    }
-}
 
-@-webkit-keyframes scanner-loop {
-    from {
-        margin-left:0%;
-    } to {
-        margin-left:70%;
-    } 
-}
